--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
         <activity android:name=".ProfileActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".ForgetPassword" />
-        <activity android:name=".SettingAccount"></activity>
+        <activity android:name=".SettingAccount" />
     </application>
 
 </manifest>
